--- a/src/index.css
+++ b/src/index.css
@@ -40,3 +40,92 @@ code {
     letter-spacing: 0.8px;
   }
 }
+.workoutButtons button {
+  width: 131px;
+  height: 24px;
+  flex-shrink: 0;
+
+  .p {
+    display: flex;
+    width: 92px;
+    height: 16px;
+    padding: 0px 4px;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+  }
+}
+
+.overlay_background {
+  background: rgba(23, 37, 42, 0.15);
+  backdrop-filter: blur(2.7182817459106445px);
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  cursor: pointer;
+  z-index: 9;
+}
+
+.overlay_container {
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0px 19px 28px 0px rgba(0, 0, 0, 0.10);
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  margin: auto;
+  z-index: 10;
+  padding: 30px;
+  width: fit-content;
+  height: fit-content;
+}
+
+  .overlay_header {
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    width: 386px;
+    height: 47px;
+    flex-direction: row;
+    gap: 15px;
+    flex-shrink: 0;
+  } 
+
+  .overlay_controls {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+  
+  .overlay_close {
+    border: none;
+    background-color: transparent;
+    font-size: 36px;
+    cursor: pointer;
+  }
+
+  input {
+    color: rgba(0, 0, 0, 0.40);
+    font-size: 14px;
+    line-height: 20px;
+    border: 1px solid #E1E5E9;
+  }
+
+  /* PROGRESS BAR */
+.progressbar {
+  width: 60px;
+  height: 4px;
+  background-color: white;
+  margin-bottom: 50px;
+}
+
+.progressbar div {
+  width: 33.3%;
+  height: 100%;
+  background-color: #A3CE63;
+}
+
