--- a/src/index.css
+++ b/src/index.css
@@ -133,3 +133,15 @@ input {
   height: 100%;
   background-color: #A3CE63;
 }
+
+.resetLog {
+  color: #FFF;
+  text-align: center;
+  font-size: 14px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
+}
