--- a/src/index.css
+++ b/src/index.css
@@ -24,21 +24,21 @@ code {
   height: 58px;
   flex-shrink: 0;
   gap: 16px;
+}
 
-  .icon {
-    width: 30px;
-    height: 30px;
-    flex-shrink: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+.icon {
+  width: 30px;
+  height: 30px;
+  flex-shrink: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-  .label {
-    font-size: 14px;
-    font-weight: 700;
-    letter-spacing: 0.8px;
-  }
+.label {
+  font-size: 14px;
+  font-weight: 700;
+  letter-spacing: 0.8px;
 }
 
 .workoutButtons button {
@@ -47,18 +47,18 @@ code {
   flex-shrink: 0;
   border-radius: 2px;
   background: #F2F2F2;
+}
 
-  .buttonText {
-    display: flex;
-    height: 16px;
-    padding: 0px 4px;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    font-size: 12px;
-    line-height: 16px;
-    flex-shrink: 0;
-  }
+.buttonText {
+  display: flex;
+  height: 16px;
+  padding: 0px 4px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 12px;
+  line-height: 16px;
+  flex-shrink: 0;
 }
 
 .overlay_background {
@@ -108,7 +108,7 @@ code {
 .overlay_header {
   display: flex;
   justify-content: space-between;
-  align-items: start;
+  align-items: flex-start;
   width: 386px;
   height: 47px;
   flex-direction: row;
